<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout="@layout/preference_header"
        android:title="@string/data_limiter">

        <Preference
            app:allowDividerBelow="false"
            android:layout="@layout/preference_title"
            android:title="@string/limiter_screen_status"
            android:key="data_limiter_status"/>

        <Preference
            android:layout="@layout/preference_title"
            android:title="@string/limiter_screen_disable"
            android:key="limiter_off"/>

        <Preference
            app:allowDividerBelow="false"
            android:layout="@layout/preference_title"
            android:title="@string/limiter_screen_enable"
            android:key="limiter_on"/>

        <PreferenceCategory
            android:layout="@layout/preference_header"
            android:title="@string/funnel">

    </PreferenceCategory>

        <Preference
            android:layout="@layout/preference_title"
            android:title="@string/offer_screen_funnel_status"
            android:key="data_limit_status"/>

        <Preference
            android:layout="@layout/preference_title"
            android:title="@string/offer_screen_funnel_reset"
            android:key="data_limit_reset"/>

    </PreferenceCategory>

</PreferenceScreen>