<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/menu_bok">

        <menu>
            <item android:title="Telefon"
                android:id="@+id/action_bok_call"/>

            <item android:title="E-mail"
                android:id="@+id/action_bok_mail"/>

            <item android:title="Facebook"
                android:id="@+id/action_bok_fb"/>

        </menu>
    </item>

    <item android:title="@string/menu_a2"
        android:id="@+id/action_a2mobile"/>

    <item android:title="@string/menu_my_a2"
        android:id="@+id/action_moje_a2"/>

    <item android:title="@string/menu_about"
        android:id="@+id/action_about"/>
</menu>