<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.oh1.a2helper.MainActivity">

    <TextView
        android:textColor="@color/text_headers"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:fontFamily="@font/google_sans_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/onboarding_permission_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/onboarding_title_permission" />


    <TextView

        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:paddingEnd="36dp"
        android:paddingStart="36dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/onboarding_permission_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/onboarding_button"
        android:text="@string/onboarding_text_permission_expl" />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/onboarding_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/google_sans_medium"
        android:text="@string/onboarding_button_text_a2"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
