<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/card_background"
        app:strokeColor="@color/card_stroke"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner"
        android:id="@+id/button_balance"
        android:layout_marginBottom="@dimen/half_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/button_charge_a2"
        app:layout_constraintEnd_toStartOf="@+id/button_charge_online"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                app:tint="@color/card_icon"
                android:layout_width="@dimen/card_icon_size"
                android:layout_height="@dimen/card_icon_size"
                app:srcCompat="@drawable/ic_balance"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:textColor="@color/card_headers"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/stan_konta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/card_background"
        app:strokeColor="@color/card_stroke"
        app:cardCornerRadius="@dimen/card_corner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_charge_online"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="@dimen/half_margin"
        android:layout_marginBottom="@dimen/half_margin"
        app:layout_constraintBottom_toTopOf="@+id/button_charge_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_balance"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                app:tint="@color/card_icon"
                android:layout_width="@dimen/card_icon_size"
                android:layout_height="@dimen/card_icon_size"
                app:srcCompat="@drawable/ic_www"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:textColor="@color/card_headers"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/doladuj_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/card_background"
        app:strokeColor="@color/card_stroke"
        app:cardCornerRadius="@dimen/card_corner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_charge_a2"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/main_screen_pref_fragment"
        app:layout_constraintEnd_toStartOf="@+id/button_charge_plus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_balance">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                app:tint="@color/card_icon"
                android:layout_width="@dimen/card_icon_size"
                android:layout_height="@dimen/card_icon_size"
                app:srcCompat="@drawable/ic_a2"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:textColor="@color/card_headers"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/doladuj_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        app:cardBackgroundColor="@color/card_background"
        app:strokeColor="@color/card_stroke"
        app:cardCornerRadius="@dimen/card_corner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_charge_plus"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/main_screen_pref_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_charge_a2"
        app:layout_constraintTop_toBottomOf="@+id/button_charge_online">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                app:tint="@color/card_icon"
                android:layout_width="@dimen/card_icon_size"
                android:layout_height="@dimen/card_icon_size"
                app:srcCompat="@drawable/ic_plus" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView

                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:textColor="@color/card_headers"
                android:fontFamily="@font/google_sans_bold"
                android:text="@string/doladuj_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:id="@+id/main_screen_pref_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/button_charge_a2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>